tests/positive/basic/concat_singleton/input.ci
void main() { print(concat(["solo"]) + "\n"); }
