tests/negative/runtime/arraypop_empty/input.ci
void main() {
    int[] values = [];
    print(toString(arrayPop(values)) + "\n");
}
